--- a/views/ofertomat.pug
+++ b/views/ofertomat.pug
@@ -4,8 +4,8 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj  
   div(class='wrapper')
-    h3 Ofertomat v. 4.1.1       
-    p(class="alert alert-success wrapper__title") Wersja 4.1.1 - uwzględnia rok 2023, auto od listopada, ceny podwyższone o 1.5%, precyzyjne liczenie zużycia  
+    h3 Ofertomat v. 4.2       
+    p(class="alert alert-success wrapper__title") Wersja 4.2 - uwzględnia rok 2023, auto od listopada, ceny podwyższone o 1.5%, precyzyjne liczenie zużycia, określanie do kiedy nowa umowa.  
     button(class="btn btn-dark show-price-change") Edycja cen 
     div
       button(class="btn btn-info show-calc-wear") Przelicz zużycie  
@@ -24,7 +24,7 @@ block content
       div
         label II strefa:
         input(class="calc-wear__input calc-wear__input--second-sphere" value=0)
-      button(class="btn btn-info calc-wear__btn") Przelicz
+      button(class="btn btn-info calc-wear__btn") Przelicz     
       p(class="calc-wear__score")
     div
       label(for="tariff") Grupa taryfowa:  
@@ -155,13 +155,13 @@ block content
        div(class="change-price-close")
          img(src="./images/close_cross.png", alt="") 
 
-  script(src="/javascripts/energaCalc.js")    
-  script(src="/javascripts/smallparts/changepricepanel.js")
-  script(src="/javascripts/smallparts/changetariffs.js")  
-  script(src="/javascripts/smallparts/setToZero.js")
-  script(src="/javascripts/tariffEngine.js")  
-  //- script(src="/javascripts/babbleTest.js")
+  //- script(src="/javascripts/energaCalc.js")    
+  //- script(src="/javascripts/smallparts/changepricepanel.js")
+  //- script(src="/javascripts/smallparts/changetariffs.js")  
+  //- script(src="/javascripts/smallparts/setToZero.js")
+  //- script(src="/javascripts/tariffEngine.js")  
+  script(src="/javascripts/babbleTest.js")
   script(src="/javascripts/smallparts/easyPrices.js") 
-  script(src="/javascripts/smallparts/calcSavings.js")
-  script(src="/javascripts/smallparts/calcWear.js")
+  //- script(src="/javascripts/smallparts/calcSavings.js")
+  //- script(src="/javascripts/smallparts/calcWear.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous")
